--- a/wiki/3.9.5.md
+++ b/wiki/3.9.5.md
@@ -65,7 +65,7 @@ experience or other perks.
 ### Equipment Changes
 
 - Placing the [Gauss Cannon](Gauss_Cannon.md) ammunition near
-  any Repair/Rearm.md silo should no longer break the Equipment Terminals
+  any Repair/Rearm Silo should no longer break the Equipment Terminals
   of the base.
 - Blocked knives from being saved to favorites, loaded from favorites,
   and swapped into holsters from inventory.
