--- a/wiki/patches/2.4.7.md
+++ b/wiki/patches/2.4.7.md
@@ -39,7 +39,7 @@ Bug Fixes
   drive through water.
 - The vehicle shield effect will no longer stick to players when they exited
   their shielded vehicles.
-- The Repair/Rearm.md functions of the Lodestar will no longer work inside of a
+- The Repair/Rearm functions of the Lodestar will no longer work inside of a
   warpgate.
 - Passengers recovering from Linkdeath in a Lodestar will no longer become stuck
   in the cargo bay.
