convert many html tables to markdown

--- a/wiki/patches/3.5.4.md
+++ b/wiki/patches/3.5.4.md
@@ -55,7 +55,7 @@ player will pick a spawn building at random.
 - The pop up menu listing that defaults to the lower right will now properly
   save it's state. That way, it will be minimized if you had it minimized the
   last time you played.
-- [Grenades](../weapons/Weapons_Index.md#Grenades) will now auto-reload more
+- [Grenades](../weapons/index.md#Grenades) will now auto-reload more
   like other weapons
 - Grenades in [Inventory](../terminology/Inventory.md) will now display how many
   are in their stack
