add missing content, drop pages that never existed

--- a/wiki/patches/3.2.6.md
+++ b/wiki/patches/3.2.6.md
@@ -47,8 +47,7 @@ default spawn loadout._
 - Standard BFR's will no longer be available for purchase.
 - The Gunner variants will be available to players after Imprinting in the
   [Caverns](../locations/Caverns.md) without requiring the
-  [Advanced BFR](<../merits/Advanced_BFR_(Merit).md>)
-  [Merit Commendation](../merits/index.md).
+  Advanced BFR [Merit Commendation](../merits/index.md).
 - The Gunner variants will be renamed [Colossus](../vehicles/Colossus.md),
   [Aphelion](../vehicles/Aphelion.md) and [Peregrine](../vehicles/Peregrine.md).
 - Adjusted the armor on the Gunner variants to all be the same, equaling the
