drop duplicate darklight vision page

--- a/wiki/patches/2.5.5.md
+++ b/wiki/patches/2.5.5.md
@@ -52,7 +52,7 @@ March 15, 2004
   [Friends List](../chat/Friends_List.md).
 - Teleporting through [Router](../vehicles/Router.md)
   [Telepad](../weapons/Telepad.md) will no longer cause
-  [Darklight](../implants/Darklight.md) to appear with normal field of vision.
+  [Darklight](../implants/Darklight_Vision.md) to appear with normal field of vision.
 - Energy [weapons](../weapons/Weapon.md) will leave a damage decal on surfaces
   again.
 - [Wall Turrets](../items/Phalanx.md) that are destroyed and repaired will
