--- a/wiki/patches/3.6.5.md
+++ b/wiki/patches/3.6.5.md
@@ -53,7 +53,7 @@ tedium of sending specific tells to CR4's or 5's.
   [Striker](../weapons/Striker.md)) should no longer be able to "retrack"
   projectiles that are in flight to a new target. The projectiles will only lock
   onto the target they were originally locked on to when they were fired.
-- We made changes to how [Darklight](../implants/Darklight.md) interacts with
+- We made changes to how [Darklight](../implants/Darklight_Vision.md) interacts with
   the [AMS](../vehicles/Advanced_Mobile_Station.md) cloak bubble to correct
   issues that could lead to easy location of AMS units.
 - Change vehicle status and oxygen meters when submerged in water to have
