--- a/wiki/patches/3.7.3.md
+++ b/wiki/patches/3.7.3.md
@@ -56,7 +56,7 @@ Version 3.7.3, released June 28th, 2005.
 - Fixed a visibility issue with the
   [Infiltration Suit](../armor/Infiltration_Suit.md) when changing displayed
   awards.
-- Corrected an issue with [Darklight](../implants/Darklight.md)
+- Corrected an issue with [Darklight](../implants/Darklight_Vision.md)
   [Implant](../implants/index.md) that caused unintended problems with the
   [AMS](../vehicles/Advanced_Mobile_Station.md).
 - Keymaps should now save when there's a space in the configuration name.
