--- a/wiki/patches/3.12.12.md
+++ b/wiki/patches/3.12.12.md
@@ -15,7 +15,7 @@ provide adequate support incase anyone gets any funny ideas of following too
 close behind. To solve the issue of grunts running along side, escaping the fire
 arc of the top guns, we've added small caliber machine guns on the sides. Anyone
 manning these guns will be given an increased range to their
-[Darklight](../implants/Darklight.md) [Implant](../implants/index.md) (if
+[Darklight](../implants/Darklight_Vision.md) [Implant](../implants/index.md) (if
 owned). To round out this new party bus, the driver will now be allowed to hop
 behind the wheel wearing reinforced armor, jam mines and jump on the horn if
 someone gets in the way. This is one heck of an overhaul!
