--- a/wiki/patches/3.13.5.md
+++ b/wiki/patches/3.13.5.md
@@ -28,7 +28,7 @@ Patch 3.13.5 (October 30, 2007)
     because orange is associated with the Fall harvest and black is associated
     with darkness and death. ….and Green resembles the color of your face after
     eating candy all night!
-- [Darklight](../implants/Darklight.md) Vision has a whole new look this festive
+- [Darklight](../implants/Darklight_Vision.md) Vision has a whole new look this festive
   season. Instead of green with purple fog, you’ll now see ghosts through red on
   top of red fog.
   - Did you know that the checking account number at the bank for Rita Miller in
@@ -48,7 +48,7 @@ Patch 3.13.5 (October 30, 2007)
   - In a true manner of Halloween, players will only be allowed to use a Knife
     to kill other players.
   - Players are urged to get proper [Implants](../implants/index.md) before
-    entering the zone such as [Darklight](../implants/Darklight.md) in order to
+    entering the zone such as [Darklight](../implants/Darklight_Vision.md) in order to
     see all apparitions.
   - The zone has limited [vehicles](../vehicles/index.md).
   - New change is that Knives’ secondary mode will now damage vehicles and
